<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_tasks">All Tasks</string>
    <string name="fab_content">fab_content</string>
    <string name="filter">filter</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="repeat_password">Repeat_Password</string>
    <string name="no_connected">\"YOU NOT CONNECT \"</string>
</resources>